--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mercan</title>
+    <title>Mercandalli</title>
     <script src="./skiko.js"></script>
     <link type="text/css" rel="stylesheet" href="styles.css"/>
 </head>
 
 <body>
 <div>
-    <canvas id="ComposeTarget" width="1600" height="950"></canvas>
+    <canvas id="ComposeTarget" width="1500" height="950"></canvas>
 </div>
 <script src="./app_presentation_web.js"></script>
 </body>
